--- a/app/src/main/res/layout/vetsignup.xml
+++ b/app/src/main/res/layout/vetsignup.xml
@@ -114,5 +114,16 @@
                 android:ems="10"
                 android:inputType="numberPassword" />
         </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <Button
+                android:id="@+id/button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Button" />
+        </TableRow>
     </TableLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
