--- a/app/src/main/res/layout/activity_pet_loginor_signup.xml
+++ b/app/src/main/res/layout/activity_pet_loginor_signup.xml
@@ -7,7 +7,7 @@
     tools:context=".petLoginorSignup">
 
     <Button
-        android:id="@+id/ownersignup"
+        android:id="@+id/ownersignuptitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="162dp"
@@ -36,7 +36,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ownersignup" />
+        app:layout_constraintTop_toBottomOf="@+id/ownersignuptitle" />
 
     <TextView
         android:id="@+id/whatrpetdoing"
@@ -49,7 +49,7 @@
         android:layout_marginRight="58dp"
         android:layout_marginBottom="8dp"
         android:text="What are you as a Pet Owner looking to do"
-        app:layout_constraintBottom_toTopOf="@+id/ownersignup"
+        app:layout_constraintBottom_toTopOf="@+id/ownersignuptitle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
