--- a/app/src/main/res/layout/vetsignup.xml
+++ b/app/src/main/res/layout/vetsignup.xml
@@ -44,16 +44,16 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:inputType="textPersonName"
-                android:text="First Name" />
+                android:hint="First Name"
+                android:inputType="textPersonName" />
 
             <EditText
                 android:id="@+id/surnamevet"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:inputType="textPersonName"
-                android:text="Surname" />
+                android:hint="Surname"
+                android:inputType="textPersonName" />
         </TableRow>
 
         <TableRow
@@ -67,8 +67,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:inputType="textPersonName"
-                android:text="Postcode" />
+                android:hint="Postcode"
+                android:inputType="textPersonName" />
         </TableRow>
 
         <TableRow
@@ -82,8 +82,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:inputType="textPersonName"
-                android:text="Vetterinary Practice" />
+                android:hint="Vetterinary Practice"
+                android:inputType="textPersonName" />
         </TableRow>
 
         <TableRow
@@ -97,8 +97,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:inputType="textEmailAddress"
-                android:text="Email Address" />
+                android:hint="Email Address"
+                android:inputType="textEmailAddress" />
         </TableRow>
 
         <TableRow
@@ -108,12 +108,12 @@
             android:gravity="center">
 
             <EditText
-                android:id="@+id/vetpassword"
+                android:id="@+id/vetpasswordsignup"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:hint="Password"
-                android:inputType="numberPassword" />
+                android:inputType="textPassword" />
         </TableRow>
 
         <TableRow
@@ -128,7 +128,7 @@
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:hint="Confirm Password"
-                android:inputType="numberPassword" />
+                android:inputType="textPassword" />
         </TableRow>
 
         <TableRow
